--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.11.1",
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/axios": "^0.14.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
